[gd_scene load_steps=23 format=3 uid="uid://cilpwxe7hq33w"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_egjtu"]
[ext_resource type="PackedScene" uid="uid://d064eie4ogknk" path="res://Player/BulletScene.tscn" id="2_fojdr"]
[ext_resource type="Texture2D" uid="uid://r452qxlwjbpw" path="res://Assets/Player/spritesheet-removebg-preview.png" id="3_kg8it"]
[ext_resource type="Animation" uid="uid://yq32dybmgi1d" path="res://Player/Down.res" id="4_cokkm"]
[ext_resource type="Animation" uid="uid://cr06lykso2url" path="res://Player/Left.res" id="5_62hqm"]
[ext_resource type="Animation" uid="uid://b72r0d7vv1vpt" path="res://Player/Right.res" id="6_26bd5"]
[ext_resource type="Animation" uid="uid://d21kcivnpianx" path="res://Player/Up.res" id="7_f51ba"]
[ext_resource type="Animation" uid="uid://bnrwuq5v0rud6" path="res://Player/idleDown.res" id="8_aayof"]
[ext_resource type="AudioStream" uid="uid://3y0sji16t1rl" path="res://Player/pow.mp3" id="9_x8gcp"]
[ext_resource type="AudioStream" uid="uid://bsj2oj4bh8jf6" path="res://Assets/sounds/05._GreenpathEncounter(1).mp3" id="10_aoglw"]
[ext_resource type="AudioStream" uid="uid://bn0lky4iusebh" path="res://Assets/sounds/Soul of Cinder (320).mp3" id="11_5kp7w"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m4m57"]
radius = 25.0
height = 100.0

[sub_resource type="Animation" id="Animation_gx3e2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mxu1n"]
_data = {
"Down": ExtResource("4_cokkm"),
"Left": ExtResource("5_62hqm"),
"RESET": SubResource("Animation_gx3e2"),
"Right": ExtResource("6_26bd5"),
"Up": ExtResource("7_f51ba"),
"idleDown": ExtResource("8_aayof")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7q3qj"]
animation = &"Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ffmef"]
animation = &"Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_alep7"]
animation = &"idleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wc5yu"]
animation = &"Up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_15wxb"]
animation = &"Right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_1j7ri"]
blend_point_0/node = SubResource("AnimationNodeAnimation_7q3qj")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ffmef")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_alep7")
blend_point_2/pos = Vector2(0, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_wc5yu")
blend_point_3/pos = Vector2(0, -1)
blend_point_4/node = SubResource("AnimationNodeAnimation_15wxb")
blend_point_4/pos = Vector2(1, 0)
min_space = Vector2(-1.2, -1.2)
max_space = Vector2(1.2, 1.2)
blend_mode = 1

[sub_resource type="Curve2D" id="Curve2D_wgo4o"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -544, -461, 0, 0, 0, 0, 605, -470, 0, 0, 0, 0, 605, 434, 0, 0, 0, 0, -549, 461, 0, 0, 0, 0, -563, -466)
}
point_count = 5

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3k875"]
radius = 9.0
height = 46.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
platform_floor_layers = 4294967040
script = ExtResource("1_egjtu")
BulletScene = ExtResource("2_fojdr")

[node name="Mage" type="Sprite2D" parent="."]
texture = ExtResource("3_kg8it")
hframes = 12

[node name="Marker2D" type="Marker2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(0.6, 0.6)
shape = SubResource("CapsuleShape2D_m4m57")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mxu1n")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendSpace2D_1j7ri")
anim_player = NodePath("../AnimationPlayer")
parameters/blend_position = Vector2(-0.00788999, 0.0158589)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_wgo4o")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
unique_name_in_owner = true
position = Vector2(-563, -466)
rotation = -1.5859
progress = 4134.46

[node name="Marker2D" type="Marker2D" parent="Path2D/PathFollow2D"]
gizmo_extents = 0.0

[node name="shot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_x8gcp")
volume_db = -19.141
pitch_scale = 2.43

[node name="dashtimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.198
one_shot = true

[node name="can_dash" type="Timer" parent="."]
one_shot = true

[node name="can_shoot" type="Timer" parent="."]
wait_time = 0.235

[node name="iframe" type="Timer" parent="."]
wait_time = 0.7

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_aoglw")
volume_db = -15.0

[node name="bossmusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_5kp7w")
volume_db = 4.0

[node name="Hitbox" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_3k875")

[connection signal="timeout" from="dashtimer" to="." method="_on_dashtimer_timeout"]
[connection signal="timeout" from="can_dash" to="." method="_on_can_dash_timeout"]
[connection signal="timeout" from="can_shoot" to="." method="_on_can_shoot_timeout"]
